add clients page

--- a/locals/es.yml
+++ b/locals/es.yml
@@ -259,3 +259,13 @@ update_password: Actualiza contraseña
 Cuentas por Pagar: 
 pay_account: Cuentas por pagar
 bill_account: Cuentas por cobrar
+identification_card: Cédula
+other_signs: Otras señas
+agent: Agente
+route: ruta
+balance_: Saldo
+localization: Localización
+fee: Cuota
+month_payment: Mes al cobro
+incorporation_date: Fecha Inclusión
+advance_payment: Prima
